# video-transcriber-prefect

./: .env.example  README.md  justfile  pyproject.toml
src/nebius_pipeline/: __main__.py  config.py  flows.py
src/nebius_pipeline/tasks/: extract.py  jobs.py  storage.py
