[project]
name = "nebius-prefect"
version = "0.1.0"
description = "Video transcription pipeline using Prefect + Nebius AI Cloud"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0",
    "nebius>=0.3.0",
    "boto3>=1.35",
]

[tool.uv.sources]
nebius-prefect = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nebius_pipeline"]
